--- a/themes/m10c/assets/css/_extra.scss
+++ b/themes/m10c/assets/css/_extra.scss
@@ -1,2 +1,17 @@
 // Do not add any CSS to this file in the theme sources.
 // This file can be overridden to add project-specific CSS.
+.post-title {
+  font-size: 2.8em;
+}
+
+.post-content {
+  font-size: 1.05em;
+}
+
+.post-meta {
+  font-size: 0.9em;
+}
+
+.posts-list-item {
+  font-size: 1.1em;
+}
