--- a/themes/m10c/assets/css/_extra.scss
+++ b/themes/m10c/assets/css/_extra.scss
@@ -2,6 +2,7 @@
 // This file can be overridden to add project-specific CSS.
 .post-title {
   font-size: 2.8em;
+  margin-bottom: 0.4em;
 }
 
 .post-content {
